@@ -1,4 +1,4 @@
-$Id: TODO,v 1.16 2003/11/19 05:46:25 dirt Exp $
+$Id: TODO,v 1.17 2003/11/19 06:53:49 dirt Exp $
 This is the todo list for GNU Texinfo.
 If you are interested in working on any of these, email bug-texinfo@gnu.org.
 
@@ -91,7 +91,7 @@ If you are interested in working on any of these, email bug-texinfo@gnu.org.
   - If node name contains an @ command, complain explicitly.
   - Call Ghostscript to get ASCII/jpg output for the @image command.
   - Better HTML output: allow settable background color, table colors
-    and spacing, <head> meta tags, back link from footnote marker, etc.
+    and spacing, <head> meta tags, etc.
   - Rewrite completely to simplify generation of different formats.
 
 * TeX:
